<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="58dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvUsername"
        android:layout_below="@+id/tvUsername"
        android:layout_marginTop="77dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:text="@string/login"
        android:onClick="authenticate" />

    <EditText
        android:id="@+id/etPasswordPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPassword"
        android:layout_alignBottom="@+id/tvPassword"
        android:layout_alignLeft="@+id/etUsernamePrompt"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etUsernamePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvUsername"
        android:layout_toRightOf="@+id/tvUsername"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

</RelativeLayout>
